--- a/html/about.html
+++ b/html/about.html
@@ -78,7 +78,7 @@
     </nav>
 
     <section class="bg-dark overlay-dark">
-      <img src="assets/img/about-header.jpg" alt="Image" class="bg-image opacity-70">
+      <img src="assets/img/about-header.jpg" alt="Owyhee Mountain Range" class="bg-image opacity-70">
       <div class="container height-lg-30">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6">
@@ -99,7 +99,9 @@
           <div class="col-xl-12 col-lg-12">
             <article>
               <h2>Our Story</h2>
-              <p class="lead text-justify">Welcome to Trails and Tails Doodles! We live in the greater Boise, ID area, a beautiful place with perfect conditions for raising puppies. We chose our name, Trails &amp; Tails Doodles, because we think Goldendoodles are perfect companions for enjoying the outdoor trails - wherever your heart leads. When you choose a puppy from us, you are gaining a fun-loving, loyal, affectionate family member.</p>
+              <p class="lead text-justify">Welcome to Trails &amp; Tails Doodles, I'm so glad you found us! Discover how a Goldendoodle puppy can bring joy, happiness, and a more abundant life to you and your loved ones. When you choose a puppy from us, you are gaining a fun-loving, loyal, affectionate family member.</p>
+              <p class="lead text-justify">We live in the greater Boise, ID area, a beautiful place with perfect conditions for raising puppies. We chose our name, Trails &amp; Tails Doodles, because we think Goldendoodles are perfect companions to accompany you and your family on all your outdoor adventures, no matter the trail you choose. </p>
+              <p class="lead text-justify">We have choosen to remain a small breeder, producing at the most four puppy litters each year. This allows us to be more engaged with our clients and their needs.</p>
               <p class="lead text-justify">Our family raised alpacas for over 20 years. We loved the many experiences we had with these rare and beautiful camelids. As the last few alpacas left our farm, we felt a large hole open in our hearts. My husband knew it wouldn't be long before I would find something to fill the void in my life. Something did come along to fill it - our fun and delightful doodles!</p>
               <blockquote class="text-center">
                 <span class="h4 d-block">
@@ -113,13 +115,13 @@
               </figure>
               <hr>
               <h3>Our Puppies</h3>
-              <p class="lead text-justify">We breed Mini Goldendoodles which are non-shedding and family-friendly. These furry companionable creatures make the perfect family pet at around 30-45 pounds. Both of these breeds are friendly, intuitive, playful, loyal, and tend to get along well with children and other dogs. They tend to be hypoallergenic and are a good selection for those people who suffer from mild animal allergies.</p>
+              <p class="lead text-justify">We breed Mini Goldendoodles which are hypoallergenic and family-friendly. These furry companions make the perfect family pet at around 30-45 pounds. We raise mini F1/F1B Goldendoodles who are friendly, intuitive, playful, loyal, and tend to get along well with children and other dogs. They tend to be hypoallergenic and are a good selection for those people who suffer from mild animal allergies.</p>
               <hr>
               <h3>Our Location</h3>
-              <p class="lead text-justify">We are located about a half hour from Boise. You are welcome to schedule a visit and/or pick your puppies up in person. We encourage our customers to fly in to get your puppy and fly back with them under the seat. We will meet you at the airport with everything you need. We also ship our puppies anywhere in the United States.</p>
+              <p class="lead text-justify">We are located 35 minutes west of Boise, Idaho. You are welcome to schedule a visit and/or pick your puppies up in person. We encourage our customers to fly in to get your puppy and fly back with them under the seat. We will meet you at the airport with everything you need. We also ship our puppies anywhere in the United States.</p>
               <hr>
               <h3>Family Business</h3>
-              <p class="lead text-justify">Our Moms live in our home with us on our small farm and are an integral part of our family. Ginger is the leader of the pack - all of us! She is just an amazing dog and we are so lucky to have found her. We are amazed at how she has taken the rest of the pups under her wing.</p>
+              <p class="lead text-justify">Rio and our Moms live on our small farm with us and are important members of our family. When Moms finish their career at raising puppies we retire them. It is our responsibility to find each of them a wonderful home where they will live out their lives and embark on new adventures with their new family.</p>
               <hr>
               <h3>Customer Service</h3>
               <p class="lead text-justify">We feel very strongly about selling the 'perfect' family dog and feel you can't do better than one of our puppies! Our puppies are well-socialized and will make well-adjusted family companions for years to come. We want to provide the best possible purchasing experience and will provide any advice you need in choosing as well as raising your pup by phone, email or in person. Kids are always welcome.</p>
