--- a/html/faq.html
+++ b/html/faq.html
@@ -98,17 +98,28 @@
         <div class="row justify-content-center">
           <div class="col-xl-12 col-lg-12">
             <article>
-              <h3>Question 1</h3>
-                <p class="lead text-justify">Answer here</p>
+              <h3>What is the price of a Trails and Tails Doodle puppy?</h3>
+                <p class="lead text-justify">All of our puppies are $2,500.</p>
               <hr>
-              <h3>Question 2</h3>
-                <p class="lead text-justify">Answer here</p>
+              <h3>Where is Trails and Tails Doodles located?</h3>
+                <p class="lead text-justify">We are located 26 miles west of Boise Idaho on a 2 acre mini farm outside of Caldwell.</p>
               <hr>
-              <h3>Question 3</h3>
-                <p class="lead text-justify">Answer here</p>
+              <h3>Are your adult/parent dogs health tested?</h3>
+                <p class="lead text-justify">Yes, we DNA test our parent dogs using Embark. We also test heart, eyes and hips through OFA (Orthopedic Foundation For Animals) at West Vet in Boise Idaho.</p>
               <hr>
-              <h3>Question 4</h3>
-                <p class="lead text-justify">Answer here</p>
+              <h3>What qualification do you, Diane Hawkes, have in raising dogs?</h3>
+                <p class="lead text-justify">This will be my fourth year of raising Goldendoodles. Even though I only raise about 4 litter of pups each year, I feel I have a broad range of animal experience. I was raised in Wyoming on a large cattle, sheep and horse ranch. I spent 23 years of my married life breeding and raising alpacas. I have also raised heirloom chickens, meat rabbits, and goats!</p>
+              <hr>
+              <h3>Do we socialize your puppies?</h3>
+                <p class="lead text-justify">Starting at day 3 we use the Early Neurological Stimulation Therapy. I am blessed to have 16 grandchildren and they help me frequently to hold, play with and interact with the puppies. I also introduce new toys, noises, music and objects to the pups daily each week.</p>
+              <hr>
+              <h3>Do you encourage early spaying and neutering?</h3>
+                <p class="lead text-justify">No, I do not. The sex organs that are being removed are vital to proper growth, long term health and development of your dog. There are some very good YouTube videos from veterinarians on the effects of Spaying and Neutering dogs at an early age.</p>
+                <p class="lead text-justify">The closer your dog gets to one year of age before having it spayed or neutered will have the 2ND best outcome for your dog’s long term health.</p>
+                <p class="lead text-justify"><b>You have to be a responsible owner</b> and not allow your dog to run free and mate with another dog. A female dog can have a partial spaying, which your vet would know how to perform, this allows her to continue to have her hormones to help her stay healthy for the rest of her life. YOU WILL HAVE TO ASK FOR THIS PROCEDURE.</p>
+              <hr>
+              <h3>What kind of doodles do you breed?</h3>
+                <p class="lead text-justify">We produce both F1 and F1B Goldendoodles. An F1 is 50% Golden Retriever and 50% Moyen Poodle. We produce F1B’s by taking a F1 doodle, usually a female dog, and mating her with an unrelated Poodle, this mating produces the F1B’s which are about 75% Poodle and 25% Retriever. Our doodles are all mini doodles since I usually breed my females with a smaller male, this being Rio, my red Moyen Poodle stud. I do not get into the Multi-Generational Doodles.</p>
             </article>
           </div>
         </div>
