--- a/html/puppies.html
+++ b/html/puppies.html
@@ -143,7 +143,7 @@
                   <p><strong>Colors:</strong><span> Medium Red to Dark Red</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
+                  <p><strong>Status:</strong><span class="text-danger"><strong> SOLD OUT</strong></span></p>
                 </li>
               </ul>
             </div>
@@ -221,16 +221,37 @@
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-4">
               <span class="h2 d-block">Movie Mondays!</span>
+              <p class="lead text-dark">Willow &amp; Rio Litter</p>
               <p class="lead mb-0">Watch our Monday Movie each week to see the puppies grow!</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/AGWYZvJTK0g/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/IVIGbil9s-8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
-                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=1"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-around py-5">
+          <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
+            <div class="pr-lg-4">
+              <span class="h2 d-block">Movie Mondays!</span>
+              <p class="lead text-dark">Mavia &amp; Rio Litter</p>
+              <p class="lead mb-0">Watch our Monday Movie each week to see the puppies grow!</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/AGWYZvJTK0g/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koum2WmvbG1-U1z11LnKaCQ1&amp;rel=0;autoplay=1&amp;controls=1" allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
           </div>
@@ -244,7 +265,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov8hU_MDEvdIvk-WzV_UxFX&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov8hU_MDEvdIvk-WzV_UxFX&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -255,7 +276,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosGYNu5lBipG_GE09jPKoG6&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosGYNu5lBipG_GE09jPKoG6&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -266,7 +287,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFsUWH3XZ-A3CeU07s52yE&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFsUWH3XZ-A3CeU07s52yE&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -279,7 +300,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovkP2q0VtpcBBQaxunCVg7e&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovkP2q0VtpcBBQaxunCVg7e&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -290,7 +311,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosKqzLcHImOdbvXyw8O-kWU&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosKqzLcHImOdbvXyw8O-kWU&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -301,7 +322,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov0voWJ0rhh5YnInzTuaXL6&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov0voWJ0rhh5YnInzTuaXL6&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -314,7 +335,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kou5oEuzSyVuOe4fl90lmaJl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kou5oEuzSyVuOe4fl90lmaJl&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -325,7 +346,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosrH1qrXrs0rLifmS4vYtQ5&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosrH1qrXrs0rLifmS4vYtQ5&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -336,7 +357,7 @@
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kota8InbzjcyMnmwQmsYotAg&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kota8InbzjcyMnmwQmsYotAg&amp;rel=0;autoplay=1&amp;controls=1"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
