--- a/html/dogs.html
+++ b/html/dogs.html
@@ -86,7 +86,7 @@
               Our Dogs
             </h1>
             <p class="lead mb-0 text-white">
-              <i>Meet the Mom &amp; Dad of our beautiful red Goldendoodles.</i>
+              <i>Meet the Moms and Dad of our beautiful red Goldendoodles.</i>
             </p>
           </div>
         </div>
@@ -101,9 +101,11 @@
         <div class="row w-100 no-gutters justify-content-center py-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3">
             <h1 class="display-4 display-4">Maiva</h1>
-            <h2 class="lead">AKC English Retriever</h2>
+            <h2 class="lead">AKC English Cream Retriever</h2>
+            <p class="lead text-dark">DOB: October 8, 2017</p>
             <hr>
-            <p class="lead text-justify">Maiva is our beautiful AKC English Retriever. She is our Goldendoodle Mom in training! We plan to pair her with Rio for gorgeous mini light to dark apricot puppies. Watch for first litter in 2019.</p>
+            <p class="lead text-justify">Maiva is our beautiful AKC English Cream Retriever. She has a very kind and patient tempermant, and her excellent mothering skills. She weighs 65 pounds and is very agile on her feet, always willing to play fetch. All of Mavia's litters have been sired by Rio. We say, "if its not broke, don't fix it." This applies to dog breeding as well. With this pairing, we get beautiful light carmel pups with a wavy coat.</p>
+            <p class="lead text-justify">Mavia has been genetically screened for any defects and is routinely checked by a licensed veternarian at West Vet in Boise, Idaho. You are welcome to ask to see the results, since we do not post this sensitive information on the Internet.</p>
           </div>
         </div>
       </div>
@@ -118,8 +120,10 @@
           <div class="col-md-10 col-lg-9 col-xl-8 p-3">
             <h1 class="display-4 display-4 text-dark">Rio</h1>
             <h2 class="lead text-dark">AKC Moyen Poodle</h2>
+            <p class="lead text-dark">DOB: June 5, 2017</p>
             <hr class="bg-dark-hr">
-            <p class="lead text-dark text-justify">Rio is our very red Moyen Poodle that will be the sire for Maiva's litter. He is charming and has an easy-going personality! Rio is very smart, and lives to please. We are hoping he passes his amazing temperament on to his puppies. He has a beautiful deep red coat.</p>
+            <p class="lead text-dark text-justify">Rio is our very red Moyen Poodle that will be the sire for our litters. He is charming and has an easy-going personality! Rio weighs 28 pounds, is very smart, and lives to please. He passes his great disposition and amazing temperament on to his puppies. He has a beautiful deep red coat.</p>
+            <p class="lead text-dark text-justify">Rio has been genetically screened for any defects and is routinely checked by a licensed veternarian at West Vet in Boise, Idaho. You are welcome to ask to see the results, since we do not post this sensitive information on the Internet.</p>
           </div>
         </div>
       </div>
@@ -134,8 +138,10 @@
           <div class="col-md-10 col-lg-9 col-xl-8 p-3">
             <h1 class="display-4 display-4">Willow</h1>
             <h2 class="lead">F1 Goldendoodle</h2>
+            <p class="lead text-dark">DOB: October 14, 2018</p>
             <hr>
-            <p class="lead text-justify">Text here</p>
+            <p class="lead text-justify">Willow is our 36 pound mini F1 Goldendoodle. Her personality is kind and lovable, she is very obident and loves her tummy rubs. She will produce mini F1B Goodlendoodles, sired by Rio with an average adult weight of 30-35 pounds.</p>
+            <p class="lead text-justify">Willow has been genetically screened for any defects and is routinely checked by a licensed veternarian at West Vet in Boise, Idaho. You are welcome to ask to see the results, since we do not post this sensitive information on the Internet.</p>
           </div>
         </div>
       </div>
@@ -168,7 +174,7 @@
                   <h3 class="mb-1 mt-2">F1B Generations</h3>
                   <hr>
                   <p>An F1B Goldendoodle is the result of breeding an F1 Goldendoodle with a Poodle. F1B puppies are 75% Poodle and 25% Retriever, which makes this generation the most hypo-allergenic of all the Goldendoodle generations we breed. The F1B Goldendoodles have beautiful wavy to curly plush coats.</p>
-                  <p>Willow is our F1 Goldendoodle. My puppies that are the result of the mating of Ginger and my red Moyen stud, Rio, are F1B Goldendoodles. They typically have soft curly coats.</p>
+                  <p>Willow is our F1 Goldendoodle. My puppies that are the result of the mating of Willow and my red Moyen stud, Rio, are F1B Goldendoodles. They typically have soft wavy to curly coats.</p>
                 </div>
               </div>
             </div>
@@ -179,7 +185,7 @@
                 <div>
                   <h3 class="mb-1 mt-2">Hybrid Vigor</h3>
                   <hr>
-                  <p>When two unrelated breeds of dogs are mated, the first generation of puppies are referred to as hybrids, thus Ginger is a hybrid. Hybrid puppies have what is called hybrid vigor and have less health problems than either purebred parent.</p>
+                  <p>When two unrelated breeds of dogs are mated, the first generation of puppies are referred to as hybrids, thus Willow is a hybrid. Hybrid puppies have what is called hybrid vigor and have less health problems than either purebred parent.</p>
 
                 </div>
               </div>
