movie-mondays id location change

--- a/html/puppies.html
+++ b/html/puppies.html
@@ -224,7 +224,7 @@
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-4">
               <span class="h2 d-block">Movie Mondays!</span>
-              <span class="h2 d-block lead"><strong>Parents:</strong> Mavia &amp; Rio</span>
+              <span class="h2 d-block lead"><strong>Parents:</strong> Willow &amp; Rio</span>
               <p class="lead mb-0">Watch our Monday Movie each week to see the puppies grow!</p>
             </div>
           </div>
