--- a/html/puppies.html
+++ b/html/puppies.html
@@ -192,7 +192,7 @@
                   <p><strong>Colors:</strong><span> Tan, Light Red</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
+                  <p><strong>Status:</strong><span class="text-danger"><strong> SOLD OUT</strong></span></p>
                 </li>
               </ul>
             </div>
