--- a/html/puppies.html
+++ b/html/puppies.html
@@ -362,7 +362,7 @@
       </div>
     </section>
     
-    <section class="bg-dark2">
+    <!--<section class="bg-dark2">
       <div class="container">
         <div class="row justify-content-around py-5">
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
@@ -480,7 +480,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section class="bg-gray">
       <div class="container">
