hide 2nd litter correction

--- a/html/puppies.html
+++ b/html/puppies.html
@@ -362,7 +362,7 @@
       </div>
     </section>
     
-    <!--<section class="bg-dark2">
+    <section class="bg-dark2">
       <div class="container">
         <div class="row justify-content-around py-5">
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
@@ -374,7 +374,7 @@
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/pJndZoEMlqY/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koum2WmvbG1-U1z11LnKaCQ1&amp;rel=0;autoplay=1&amp;controls=0"
@@ -384,7 +384,7 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <!--<div class="container">
         <div class="row justify-content-around">
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Mavia &amp; Rio)</h5>
@@ -479,8 +479,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>-->
+      </div>-->
+    </section>
 
     <section class="bg-gray">
       <div class="container">
