--- a/html/puppies.html
+++ b/html/puppies.html
@@ -384,7 +384,7 @@
           </div>
         </div>
       </div>
-      <!--<div class="container">
+      <div class="container">
         <div class="row justify-content-around">
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Mavia &amp; Rio)</h5>
@@ -479,7 +479,7 @@
             </div>
           </div>
         </div>
-      </div>-->
+      </div>
     </section>
 
     <section class="bg-gray">
