--- a/html/puppies.html
+++ b/html/puppies.html
@@ -389,7 +389,7 @@
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotNcvPOmSYI4mBjE8ydooF3&amp;rel=0;autoplay=1&amp;controls=0"
@@ -400,7 +400,7 @@
           <div class="col-lg-4 py-2">
             <h5>Brown Boy (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/RcRf2zrstOI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kot41yx1a4Y2EA5rVoi_keRq&amp;rel=0;autoplay=1&amp;controls=0"
@@ -409,12 +409,12 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Lime Green Boy (Mavia &amp; Rio)</h5>
+            <h5>Green Boy (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotU5y1KGLDai3UBbxnE7k3u&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -424,7 +424,7 @@
           <div class="col-lg-4 py-2">
             <h5>Red Boy (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/wglrExw3G-8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kouy8_lSbvnJyx-_nSmEUaWw&amp;rel=0;autoplay=1&amp;controls=0"
@@ -435,7 +435,7 @@
           <div class="col-lg-4 py-2">
             <h5>Purple Boy (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/lE6v8_g3HA0/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouHUXnQjWLR9k3NkwLZW2OU&amp;rel=0;autoplay=1&amp;controls=0"
@@ -446,7 +446,7 @@
           <div class="col-lg-4 py-2">
             <h5>Yellow Girl (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/4c2mpprfZGI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovLsn9Xe3Jwqv1YCkMNDd8_&amp;rel=0;autoplay=1&amp;controls=0"
@@ -459,7 +459,7 @@
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/ZWbmSNIT1uM/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovCrcQWetCifR4NinjYH9jl&amp;rel=0;autoplay=1&amp;controls=0"
@@ -470,7 +470,7 @@
           <div class="col-lg-4 py-2">
             <h5>White Girl (Mavia &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <img alt="Image" src="http://i.ytimg.com/vi/SBrjLIur18I/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovwuPzie8bzn19PBMSejScT&amp;rel=0;autoplay=1&amp;controls=0"
