reduce images to 16

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -129,144 +129,32 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img8" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img8" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img9" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img9" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img10" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img10" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img11" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img11" src="assets/img/nophotofound.png"/>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img12" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img12" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img13" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img13" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img14" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img14" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card" id="img15" src="assets/img/nophotofound.png"/>
+            <img class="card-img flex-lg-grow-1" id="img15" src="assets/img/nophotofound.png"/>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img16" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img17" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img18" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img19" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img20" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img21" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img22" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img23" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img24" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img25" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img26" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img27" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img28" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img29" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img30" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img31" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img32" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img33" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img34" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img35" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img36" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img37" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img38" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img39" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img40" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img41" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img42" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img43" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img45" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img46" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img47" src="assets/img/nophotofound.png"/>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card" id="img48" src="assets/img/nophotofound.png"/>
-          </div>
-        </div>        
       </div>
     </section>
 
