--- a/html/about.html
+++ b/html/about.html
@@ -99,9 +99,9 @@
           <div class="col-xl-12 col-lg-12">
             <article>
               <h2>Our Story</h2>
-              <p class="lead text-justify">Welcome to Trails &amp; Tails Doodles, I'm so glad you found us! Discover how a Goldendoodle puppy can bring joy, happiness, and a more abundant life to you and your loved ones. When you choose a puppy from us, you are gaining a fun-loving, loyal, affectionate family member.</p>
+              <p class="lead text-justify">Welcome to Trails &amp; Tails Doodles, I'm so glad you found us! Discover how an Aussiedoodle or Goldendoodle puppy can bring joy, happiness, and a more abundant life to you and your loved ones. When you choose a puppy from us, you are gaining a fun-loving, loyal, affectionate, well-adjusted, and healthy family member.</p>
               <p class="lead text-justify">We live in the greater Boise, ID area, a beautiful place with perfect conditions for raising puppies. We chose our name, Trails &amp; Tails Doodles, because we think Goldendoodles are perfect companions to accompany you and your family on all your outdoor adventures, no matter the trail you choose. </p>
-              <p class="lead text-justify">We have choosen to remain a small breeder, producing at the most four puppy litters each year. This allows us to be more engaged with our clients and their needs.</p>
+              <p class="lead text-justify">We have choosen to remain a small breeder, producing at the most four puppy litters each year. This allows us to be more engaged with our clients and puppies, and their needs.</p>
               <p class="lead text-justify">Our family raised alpacas for over 20 years. We loved the many experiences we had with these rare and beautiful camelids. As the last few alpacas left our farm, we felt a large hole open in our hearts. My husband knew it wouldn't be long before I would find something to fill the void in my life. Something did come along to fill it - our fun and delightful doodles!</p>
               <blockquote class="text-center">
                 <span class="h4 d-block">
@@ -115,7 +115,8 @@
               </figure>
               <hr>
               <h3>Our Puppies</h3>
-              <p class="lead text-justify">We breed Mini Goldendoodles which are hypoallergenic and family-friendly. These furry companions make the perfect family pet at around 30-45 pounds. We raise mini F1/F1B Goldendoodles who are friendly, intuitive, playful, loyal, and tend to get along well with children and other dogs. They tend to be hypoallergenic and are a good selection for those people who suffer from mild animal allergies.</p>
+              <p class="lead text-justify">We focus on raising mini F1B Doodles which are low to non-shedding, hypoallergenic, family-friendly, and oh so smart! These furry companions make the perfect family pet at around 30-35 pounds. We raise red mini F1B Goldendoodles and colorful mini F1B Aussiedoodles who are friendly, intuitive, playful, loyal, and tend to get along well with children and other dogs. They tend to be hypoallergenic and are a good selection for those people who suffer from mild animal allergies.</p>
+              <p class="lead text-justify">We cater to first-time puppy parents.  We also keep you up to speed on all the happenings here at our home during your puppy's development and growth. We will make suggestions and direct you to additional reading material and videos to watch. I give each of our family's a great book, "Good Owners, Great Dogs" by Brian Kilcommons and Sarah Wilson.</p>
               <hr>
               <h3>Our Location</h3>
               <p class="lead text-justify">We are located 35 minutes west of Boise, Idaho. You are welcome to schedule a visit and/or pick your puppies up in person. We encourage our customers to fly in to get your puppy and fly back with them under the seat. We will meet you at the airport with everything you need. We also ship our puppies anywhere in the United States.</p>
